# self-driving-car

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md  rlbot.cfg  rustfmt.toml
brain/: Cargo.toml  build.rs
brain/recordings/: jump_save_from_inside_goal.csv
brain/src/: behavior.rs  brain.rs  eeg.rs  lib.rs
brain/src/behavior/: aerial_shot.rs  behavior.rs  bounce_dribble.rs  carry_from_bounce.rs  corner_offense.rs  defense.rs  higher_order.rs  jump_shot.rs  kickoff.rs  mod.rs  null.rs  offense.rs  regroup.rs  retreating_save.rs  root.rs  runner.rs  shoot.rs  side_wall_self_pass.rs  tepid_hit.rs
brain/src/behaviors/: mod.rs  root.rs  shoot.rs
brain/src/eeg/: color.rs  eeg.rs  mod.rs  recipes.rs  window.rs
brain/src/helpers/: ball.rs  drive.rs  hit_angle.rs  intercept.rs  telepathy.rs
brain/src/integration_tests/: builder.rs  car_aerial_60deg.rs  coordinates.rs  helpers.rs  misc.rs  mod.rs  playback.rs  running_test.rs  scenario.rs  templates.rs  utils.rs
brain/src/maneuvers/: aerial_loc_time.rs  blitz_to_location.rs  bounce_shot.rs  drive_towards.rs  fifty_fifty.rs  get_to_flat_ground.rs  ground_shot.rs  grounded_hit.rs  jump_shot.rs  mod.rs  panic_defense.rs
brain/src/mechanics/: dodge.rs  drive_loc_time_decelerate.rs  ground_accel_to_loc.rs  hesitant_drive_to_loc.rs  jump_and_turn.rs  misc.rs  mod.rs  quick_jump_and_dodge.rs  simple_steer_towards.rs  skip_recover.rs  (+1 more)
play/: Cargo.toml  build.rs
play/src/: banner.rs  built.rs  hacketeer.rs  logging.rs  main.rs  rlbot_ext.rs
simulate/: Cargo.toml  build.rs
simulate/data/: aerial_60deg.csv  boost.csv  jump.csv  powerslide_turn_speed_0_throttle_0.csv  powerslide_turn_speed_0_throttle_1.csv  powerslide_turn_speed_1000_throttle_0.csv  powerslide_turn_speed_1000_throttle_1.csv  powerslide_turn_speed_100_throttle_0.csv  powerslide_turn_speed_100_throttle_1.csv  powerslide_turn_speed_1100_throttle_0.csv  powerslide_turn_speed_1100_throttle_1.csv  powerslide_turn_speed_1200_throttle_0.csv  powerslide_turn_speed_1200_throttle_1.csv  powerslide_turn_speed_1300_throttle_0.csv  powerslide_turn_speed_1300_throttle_1.csv  powerslide_turn_speed_1400_throttle_0.csv  powerslide_turn_speed_1400_throttle_1.csv  powerslide_turn_speed_1500_throttle_0.csv  powerslide_turn_speed_1500_throttle_1.csv  powerslide_turn_speed_1600_throttle_0.csv  powerslide_turn_speed_1600_throttle_1.csv  powerslide_turn_speed_1700_throttle_0.csv  powerslide_turn_speed_1700_throttle_1.csv  powerslide_turn_speed_1800_throttle_0.csv  powerslide_turn_speed_1800_throttle_1.csv  powerslide_turn_speed_1900_throttle_0.csv  powerslide_turn_speed_1900_throttle_1.csv  powerslide_turn_speed_2000_throttle_0.csv  powerslide_turn_speed_2000_throttle_1.csv  powerslide_turn_speed_200_throttle_0.csv  powerslide_turn_speed_200_throttle_1.csv  powerslide_turn_speed_2100_throttle_0.csv  powerslide_turn_speed_2100_throttle_1.csv  powerslide_turn_speed_2200_throttle_0.csv  powerslide_turn_speed_2200_throttle_1.csv  powerslide_turn_speed_2299.98_throttle_0.csv  powerslide_turn_speed_2299.98_throttle_1.csv  powerslide_turn_speed_300_throttle_0.csv  powerslide_turn_speed_300_throttle_1.csv  powerslide_turn_speed_400_throttle_0.csv  (+13 more)
simulate/src/: ball.rs  car.rs  car1d.rs  car1dv2.rs  car_aerial_60deg.rs  car_forward_dodge.rs  car_jump.rs  car_powerslide_turn.rs  car_single_jump.rs  collision.rs  lib.rs  math.rs  rl.rs  tables.rs
(+261 files in other folders)
