[package]
name = "brain"
version = "0.1.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.2.6"
derive-new = "0.5.5"
flatbuffers = "0.5.0"
itertools = "0.7.8"
lazycell = "1.2.0"

lazy_static = "1.1.0"
ordered-float = "1.0.1"

nalgebra = "0.16.0"
ncollide3d = "0.17.1"

log = "0.4.5"

piston_window = "0.80.0"
piston2d-graphics = "0.26.0"

rlbot = "0.2.0"
chip = "0.0.4"

common = { path = "../common" }
collect = { path = "../collect" }
dom = { path = "../dom" }
simulate = { path = "../simulate" }

[dev-dependencies]
brain-test-data = { path = "../brain-test-data" }

[features]
strict = []
