[package]
name = "play"
version = "0.1.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
lazy_static = "1.1.0"

log = "0.4.5"
env_logger = "0.5.13"

rlbot = "0.2.0"

brain = { path = "../brain" }
collect = { path = "../collect" }
common = { path = "../common" }

[features]
strict = []
